--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       class="sticky top-0 bg-white/90 z-50 flex justify-between items-center py-1 px-4 lg:px-36"
     >
       <div class="flex items-center gap-10">
-        <img src="../imgs/ft-logo.webp" alt="" />
+        <img src="./imgs/ft-logo.webp" alt="" />
         <div class="hidden lg:block w-full h-full">
           <div
             class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
