--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <div
       class="sticky top-0 bg-white/90 z-50 flex justify-between items-center py-1 px-4 lg:px-36"
     >
-      <div class="flex items-center gap-10">
-        <img src="./imgs/ft-logo.webp" alt="" />
+      <div class="flex items-center gap-10 max-w-[80rem]">
+        <button class="lg:hidden"><i class="fa-solid fa-bars"></i></button>
+        <img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" />
         <div class="hidden lg:block w-full h-full">
           <div
             class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
@@ -65,7 +66,7 @@
     </div>
     <!--  -->
     <div class="w-full">
-      <img src="./imgs/image-54-2048x711-2.webp" alt="" />
+      <img class="" src="./imgs/image-54-2048x711-2.webp" alt="" />
     </div>
     <div
       class="flex justify-center items-center gap-4 py-6 mx-4 lg:mx-36 border-b-[1px] border-gray-400/30"
