--- a/index.html
+++ b/index.html
@@ -21,48 +21,52 @@
   </head>
   <body class="">
     <header class="w-full hidden lg:block">
-      <div
-        class="bg-black flex justify-between items-center text-white py-2 px-4 lg:px-36"
-      >
-        <p class="text-xs">
-          Authentic Shoes - Nhà sưu tầm và phân phối chính hãng các thương hiệu
-          thời trang quốc tế hàng đầu Việt Nam
-        </p>
-        <p class="cursor-pointe text-[13px]">Đăng nhập</p>
+      <div class="bg-black py-2 px-4">
+        <div
+          class="mx-auto flex justify-between items-center text-white lg:max-w-[80rem]"
+        >
+          <p class="text-xs">
+            Authentic Shoes - Nhà sưu tầm và phân phối chính hãng các thương
+            hiệu thời trang quốc tế hàng đầu Việt Nam
+          </p>
+          <p class="cursor-pointe text-[13px]">Đăng nhập</p>
+        </div>
       </div>
     </header>
     <!--  -->
-    <div
-      class="sticky top-0 bg-white/90 z-50 flex justify-between items-center py-1 px-4 lg:px-36"
-    >
-      <div class="flex items-center gap-10 max-w-[80rem]">
-        <button class="lg:hidden"><i class="fa-solid fa-bars"></i></button>
-        <img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" />
-        <div class="hidden lg:block w-full h-full">
-          <div
-            class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
-          >
-            <a class="" href="#">Trang Chủ</a>
-            <a class="" href="#"
-              >Giày <i class="fa-solid fa-chevron-down fa-xs"></i
-            ></a>
-            <a class="" href="#"
-              >Quần áo <i class="fa-solid fa-chevron-down fa-xs"></i
-            ></a>
-            <a class="" href="#"
-              >phụ kiện <i class="fa-solid fa-chevron-down fa-xs"></i
-            ></a>
+    <div class="w-full sticky top-[-1px] bg-white/90 z-50">
+      <nav
+        class="flex justify-between items-center py-1 px-4 mx-auto lg:max-w-[80rem]"
+      >
+        <div class="flex items-center gap-10">
+          <button class="lg:hidden"><i class="fa-solid fa-bars"></i></button>
+          <img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" />
+          <div class="hidden lg:block w-full h-full">
+            <div
+              class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
+            >
+              <a class="" href="#">Trang Chủ</a>
+              <a class="" href="#"
+                >Giày <i class="fa-solid fa-chevron-down fa-xs"></i
+              ></a>
+              <a class="" href="#"
+                >Quần áo <i class="fa-solid fa-chevron-down fa-xs"></i
+              ></a>
+              <a class="" href="#"
+                >phụ kiện <i class="fa-solid fa-chevron-down fa-xs"></i
+              ></a>
 
-            <a class="" href="#">Tin tức - sự kiện</a
-            ><a class="" href="#">Liên hệ</a>
+              <a class="" href="#">Tin tức - sự kiện</a
+              ><a class="" href="#">Liên hệ</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flex items-center gap-4">
-        <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
-        <div class="w-[1px] h-9 bg-slate-500"></div>
-        <button><i class="fa-solid fa-basket-shopping fa-lg"></i></button>
-      </div>
+        <div class="flex items-center gap-4">
+          <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
+          <div class="w-[1px] h-9 bg-slate-500"></div>
+          <button><i class="fa-solid fa-basket-shopping fa-lg"></i></button>
+        </div>
+      </nav>
     </div>
     <!--  -->
     <div class="w-full">
@@ -100,7 +104,7 @@
         </p>
       </button>
     </div>
-    <div class="px-4 lg:px-36 py-12 w-full flex flex-col gap-1">
+    <div class="px-4 py-12 w-full flex flex-col gap-1 lg:max-w-[80rem] mx-auto">
       <p class="text-base font-bold">Giày chính hãng Nike 2023</p>
       <p class="text-base">
         Mẫu giày Nike Jordan 1, Air Force 1, các sản phẩm bóng rổ,… mới nhất
@@ -327,11 +331,13 @@
         </button>
       </div>
     </div>
-    <div class="px-4 py-4 lg:px-36 lg:py-12 w-full flex flex-col gap-1">
+    <div
+      class="px-4 py-4 lg:py-12 w-full flex flex-col gap-1 lg:max-w-[80rem] mx-auto"
+    >
       <p class="text-base font-bold">Thương Hiệu Nổi Bật</p>
       <p class="text-base">Mặt hàng giày các thương hiệu nổi bật</p>
     </div>
-    <div class="flex flex-wrap items-center py-1 px-4 lg:px-36">
+    <div class="flex flex-wrap items-center py-1 px-4 lg:max-w-[80rem] mx-auto">
       <!--  -->
       <div class="w-1/5 flex flex-col items-center p-1">
         <div
@@ -525,7 +531,7 @@
       />
     </div>
     <!--  -->
-    <div class="px-4 lg:px-36 py-12 w-full flex flex-col gap-1">
+    <div class="px-4 py-12 w-full flex flex-col gap-1 lg:max-w-[80rem] mx-auto">
       <p class="text-base font-bold">Giày chính hãng Nike 2023</p>
       <p class="text-base">
         Mẫu giày Nike Jordan 1, Air Force 1, các sản phẩm bóng rổ,… mới nhất
@@ -808,7 +814,7 @@
       />
     </div>
     <!--  -->
-    <div class="px-4 lg:px-36 py-12 w-full flex flex-col gap-1">
+    <div class="px-4 py-12 w-full flex flex-col gap-1 lg:max-w-[80rem] mx-auto">
       <p class="text-base font-bold">Phụ kiện</p>
       <p class="text-base">Mặt hàng phụ kiện các thương hiệu nổi bật</p>
       <div class="flex flex-col items-center border-b-[2px] pb-10">
@@ -1003,7 +1009,7 @@
       </div>
     </div>
     <!--  -->
-    <div class="px-4 lg:px-36 py-12 w-full flex flex-col gap-1">
+    <div class="px-4 py-12 w-full flex flex-col gap-1 lg:max-w-[80rem] mx-auto">
       <p class="text-base font-bold">Phụ kiện</p>
       <p class="text-base">Mặt hàng phụ kiện các thương hiệu nổi bật</p>
       <div class="flex flex-col items-center border-b-[2px] pb-10">
@@ -1069,7 +1075,7 @@
       </div>
     </div>
     <!--  -->
-    <div class="px-4 lg:px-36 py-12 w-full flex flex-col gap-1">
+    <div class="px-4 py-12 w-full flex flex-col gap-1 lg:max-w-[80rem] mx-auto">
       <p class="text-base font-bold">Áo Khoác The North Face</p>
       <p class="text-base">
         Mua sắm các sản phẩm Collab của TNF với các thương hiệu hàng đầu thế
@@ -1160,7 +1166,7 @@
       </div>
     </div>
     <footer class="w-full">
-      <div class="w-full lg:flex px-4 lg:px-36">
+      <div class="w-full lg:flex px-4 lg:max-w-[80rem] mx-auto">
         <!--  -->
         <div class="w-full text-base px-4 lg:w-1/2">
           <img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" />
@@ -1272,7 +1278,9 @@
         <!--  -->
       </div>
       <div class="bg-black px-4 lg:px-36 py-2">
-        <p class="text-white">© Bản quyền thuộc về Authentic Shoes</p>
+        <p class="text-white lg:max-w-[80rem] mx-auto">
+          © Bản quyền thuộc về Authentic Shoes
+        </p>
       </div>
     </footer>
   </body>
