--- a/index.html
+++ b/index.html
@@ -20,54 +20,58 @@
     <title>authentic-shoes</title>
   </head>
   <body class="">
-    <div class="w-full hidden lg:block">
-      <div class="bg-black py-2 px-4">
-        <div
-          class="mx-auto flex justify-between items-center text-white lg:max-w-[80rem]"
-        >
-          <p class="text-xs">
-            Authentic Shoes - Nhà sưu tầm và phân phối chính hãng các thương
-            hiệu thời trang quốc tế hàng đầu Việt Nam
-          </p>
-          <p class="cursor-pointe text-[13px]">Đăng nhập</p>
-        </div>
-      </div>
-    </div>
-    <!--  -->
-    <nav class="w-full sticky top-[-1px] bg-white/90 z-50">
-      <div
-        class="flex justify-between items-center py-1 px-4 mx-auto lg:max-w-[80rem]"
-      >
-        <div class="flex items-center gap-10">
-          <button class="lg:hidden"><i class="fa-solid fa-bars"></i></button>
-          <h1><img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" /></h1>
-          <div class="hidden lg:block w-full h-full">
-            <div
-              class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
-            >
-              <a class="" href="#">Trang Chủ</a>
-              <a class="" href="#"
-                >Giày <i class="fa-solid fa-chevron-down fa-xs"></i
-              ></a>
-              <a class="" href="#"
-                >Quần áo <i class="fa-solid fa-chevron-down fa-xs"></i
-              ></a>
-              <a class="" href="#"
-                >phụ kiện <i class="fa-solid fa-chevron-down fa-xs"></i
-              ></a>
-
-              <a class="" href="#">Tin tức - sự kiện</a
-              ><a class="" href="#">Liên hệ</a>
-            </div>
+    <header class="contents top-0">
+      <div class="w-full hidden lg:block">
+        <div class="bg-black py-2 px-4">
+          <div
+            class="mx-auto flex justify-between items-center text-white lg:max-w-[80rem]"
+          >
+            <p class="text-xs">
+              Authentic Shoes - Nhà sưu tầm và phân phối chính hãng các thương
+              hiệu thời trang quốc tế hàng đầu Việt Nam
+            </p>
+            <p class="cursor-pointe text-[13px]">Đăng nhập</p>
           </div>
         </div>
-        <div class="flex items-center gap-4">
-          <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
-          <div class="w-[1px] h-9 bg-slate-500"></div>
-          <button><i class="fa-solid fa-basket-shopping fa-lg"></i></button>
-        </div>
       </div>
-    </nav>
+      <!--  -->
+      <nav class="w-full sticky top-[-1px] bg-white/90 z-50">
+        <div
+          class="flex justify-between items-center py-1 px-4 mx-auto lg:max-w-[80rem]"
+        >
+          <div class="flex items-center gap-10">
+            <button class="lg:hidden"><i class="fa-solid fa-bars"></i></button>
+            <h1>
+              <img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" />
+            </h1>
+            <div class="hidden lg:block w-full h-full">
+              <div
+                class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
+              >
+                <a class="" href="#">Trang Chủ</a>
+                <a class="" href="#"
+                  >Giày <i class="fa-solid fa-chevron-down fa-xs"></i
+                ></a>
+                <a class="" href="#"
+                  >Quần áo <i class="fa-solid fa-chevron-down fa-xs"></i
+                ></a>
+                <a class="" href="#"
+                  >phụ kiện <i class="fa-solid fa-chevron-down fa-xs"></i
+                ></a>
+
+                <a class="" href="#">Tin tức - sự kiện</a
+                ><a class="" href="#">Liên hệ</a>
+              </div>
+            </div>
+          </div>
+          <div class="flex items-center gap-4">
+            <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
+            <div class="w-[1px] h-9 bg-slate-500"></div>
+            <button><i class="fa-solid fa-basket-shopping fa-lg"></i></button>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!--  -->
     <main class="w-full">
       <div class="w-full">
