--- a/index.html
+++ b/index.html
@@ -35,15 +35,95 @@
         </div>
       </div>
       <!--  -->
-      <nav class="w-full sticky top-[-1px] bg-white/90 z-50">
+      <nav class="w-full sticky top-[-1px] bg-white/90 z-10">
         <div
           class="flex justify-between items-center py-1 px-4 mx-auto lg:max-w-[80rem]"
         >
           <div class="flex items-center gap-10">
-            <button class="lg:hidden"><i class="fa-solid fa-bars"></i></button>
+            <button
+              name="sidebar"
+              onclick="showSidebar(this)"
+              class="lg:hidden"
+            >
+              <i class="fa-solid fa-bars"></i>
+            </button>
             <h1>
               <img class="h-14 lg:h-max" src="imgs/ft-logo.webp" alt="" />
             </h1>
+            <!--  -->
+            <div
+              class="nav-links lg:hidden bg-black/40 w-full h-full top-0 left-0 fixed z-50"
+              hidden="hidden"
+            >
+              <button
+                onclick="hideSidebar(this)"
+                name="close"
+                class="absolute top-4 right-4"
+              >
+                <i class="fa-solid fa-xmark fa-lg" style="color: white"></i>
+              </button>
+              <div
+                class="w-2/3 h-full bg-white flex flex-col justify-start uppercase text-base py-14 px-4"
+              >
+                <div class="relative mt-1 mb-3 rounded-full shadow-sm">
+                  <input
+                    type="text"
+                    name="price"
+                    id="price"
+                    class="block w-full rounded-full border-0 py-1.5 pl-3 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-white sm:text-sm sm:leading-6"
+                    placeholder="Tìm kiếm"
+                  />
+                  <div class="absolute inset-y-0 right-2 flex items-center">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                  </div>
+                </div>
+                <div
+                  class="flex justify-between items-center border-t-[1px] border-gray-200"
+                >
+                  <a class="uppercase text-sm font-bold py-4" href="#"
+                    >Giày Jordan khác
+                  </a>
+                  <i class="fa-solid fa-chevron-right"></i>
+                </div>
+                <div
+                  class="flex justify-between items-center border-t-[1px] border-gray-200"
+                >
+                  <a class="uppercase text-sm font-bold py-4" href="#"
+                    >Giay sneaker
+                  </a>
+                  <i class="fa-solid fa-chevron-right"></i>
+                </div>
+                <div
+                  class="flex justify-between items-center border-t-[1px] border-gray-200"
+                >
+                  <a class="uppercase text-sm font-bold py-4" href="#"
+                    >Quần áo
+                  </a>
+                  <i class="fa-solid fa-chevron-right"></i>
+                </div>
+                <div
+                  class="flex justify-between items-center border-t-[1px] border-gray-200"
+                >
+                  <a class="uppercase text-sm font-bold py-4" href="#"
+                    >Phụ kiện
+                  </a>
+                  <i class="fa-solid fa-chevron-right"></i>
+                </div>
+                <div
+                  class="flex justify-between items-center border-t-[1px] border-gray-200"
+                >
+                  <a class="uppercase text-sm font-bold py-4" href="#">News </a>
+                </div>
+                <div
+                  class="flex justify-between items-center border-t-[1px] border-gray-200"
+                >
+                  <a class="uppercase text-sm font-bold py-4" href="#"
+                    >Liên hệ
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!--  -->
             <div class="hidden lg:block w-full h-full">
               <div
                 class="w-full h-full flex justify-start items-center uppercase text-base gap-x-12 flex-wrap"
@@ -65,8 +145,10 @@
             </div>
           </div>
           <div class="flex items-center gap-4">
-            <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
-            <div class="w-[1px] h-9 bg-slate-500"></div>
+            <button class="hidden lg:block">
+              <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+            </button>
+            <div class="hidden lg:block w-[1px] h-9 bg-slate-500"></div>
             <button><i class="fa-solid fa-basket-shopping fa-lg"></i></button>
           </div>
         </div>
@@ -1413,5 +1495,18 @@
         </p>
       </div>
     </footer>
+    <script>
+      const navLinks = document.querySelector(".nav-links");
+      function showSidebar(event) {
+        event.name === "menu",
+          navLinks.classList.add("block"),
+          navLinks.classList.remove("hidden");
+      }
+      function hideSidebar(event) {
+        event.name == "close",
+          navLinks.classList.add("hidden"),
+          navLinks.classList.add("block");
+      }
+    </script>
   </body>
 </html>
